add zero padding and change bkgrnd color

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,11 @@
 body {
   background-color: green; }
 
-/*# sourceMappingURL=styles.css.map */
+.container{
+  text-align: center;
+}
+
+
+#hours::after, #minutes::after{
+  content: ":";
+}
